@startuml

title __RECOMENDACIONES's Class Diagram__\n

  namespace com.example.cardihealt {
    namespace Recomendaciones {
      class com.example.cardihealt.Recomendaciones.Adapter_Recomendaciones {
          ~ context : Context
          ~ myRecomendacion : List_Recomendaciones[]
          + Adapter_Recomendaciones()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Recomendaciones {
      class com.example.cardihealt.Recomendaciones.Adapter_Recomendaciones.ViewHolder {
          ~ movieImage : ImageView
          ~ textViewDate : TextView
          ~ textViewName : TextView
          + ViewHolder()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Recomendaciones {
      class com.example.cardihealt.Recomendaciones.List_Recomendaciones {
          - movieDate : String
          - movieImage : Integer
          - movieName : String
          + List_Recomendaciones()
          + getMovieDate()
          + getMovieImage()
          + getRecomendacion()
          + setMovieDate()
          + setMovieImage()
          + setMovieName()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Recomendaciones {
      class com.example.cardihealt.Recomendaciones.Recomendaciones {
          ~ elements : List<List_Recomendaciones>
          # onCreate()
      }
    }
  }
  

  com.example.cardihealt.Recomendaciones.Adapter_Recomendaciones -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.cardihealt.Recomendaciones.Adapter_Recomendaciones +-down- com.example.cardihealt.Recomendaciones.Adapter_Recomendaciones.ViewHolder
  com.example.cardihealt.Recomendaciones.Adapter_Recomendaciones.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.cardihealt.Recomendaciones.Recomendaciones -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
